# glfw-template

./: .gitmodules  CMakeLists.txt  run.sh
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/stb_image/: CMakeLists.txt
res/shaders/: floor.fs  fragment.glsl  light.fs
src/: main.cpp  map.h  shader.h
